--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,6 +39,7 @@ jobs:
 
             # Install Composer dependencies (no-dev) and run Laravel commands
             composer install --no-dev
+            npm install
             php artisan migrate --force
             php artisan nova:publish
             php artisan optimize
