--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "outl1ne/nova-multiselect-field": "^4.5",
         "sereny/nova-permissions": "^1.3"
     },
     "require-dev": {
