--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,16 @@
     "require": {
         "php": "^8.1",
         "ardenthq/nova-image-gallery-field": "^2.2",
+        "emilianotisato/nova-tinymce": "^2.0",
+        "eminiarts/nova-tabs": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "outl1ne/nova-multiselect-field": "^4.5",
-        "sereny/nova-permissions": "^1.3"
+        "sereny/nova-permissions": "^1.3",
+        "unisharp/laravel-filemanager": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
