--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.22",
+        "maatwebsite/excel": "3.1.48",
         "outl1ne/nova-multiselect-field": "^4.5",
         "sereny/nova-permissions": "^1.3",
         "unisharp/laravel-filemanager": "^2.6"
