--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ardenthq/nova-image-gallery-field": "^2.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "emilianotisato/nova-tinymce": "^2.0",
         "eminiarts/nova-tabs": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
