--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "eminiarts/nova-tabs": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/nova": "^4.0",
+        "laravel/nova": "4.32.11",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.22",
