--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "toast": "^0.5.4",
+        "toastr": "^2.1.4"
     }
 }
