--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fontsource/lato": "^5.1.0",
         "cropperjs": "^1.6.2",
         "sweetalert2": "^11.14.1",
         "toast": "^0.5.4",
